# ezmath

./: .gitmodules  CMakeLists.txt
include/Math/ez/: AABox.h  AACube.h  AAHyperBox.h  AAHyperBox.tcc  AAHyperCube.h  AAHyperCube.tcc  AAHyperRectangle.h  AAHyperRectangle.tcc  AARect.h  BinaryIndex.h  Capsule.h  Capsule.tcc  Circle.h  Color.h  Color.tcc  Cylinder.h  Cylinder.tcc  Geometry.h  HyperBox.h  HyperBox.tcc  HyperSphere.h  HyperSphere.tcc  IntersectMode.h  Line.h  Line.tcc  Mat.h  Mat.tcc  Math.h  MathCommon.h  MathForward.h  MathInitializerTokens.h  MathInitializers.h  MathIntersection.h  MathIntersections.h  MathMultiComponent.h  MathRandom.h  MathSwizzling.h  MathTypeTraits.h  Octree.h  Octree.tcc  (+21 more)
scripts/: clang-format-all-files.sh
